/*
This file is part of ShieldBlaze ExpressGateway. [www.shieldblaze.com]
Copyright (c) 2020-2021 ShieldBlaze

ShieldBlaze ExpressGateway is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

ShieldBlaze ExpressGateway is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with ShieldBlaze ExpressGateway.  If not, see <https://www.gnu.org/licenses/>.
 */
syntax = "proto3";
package com.shieldblaze.expressgateway.controlinterface.configuration;

message ConfigurationResponse {
  bool success = 1;
  string responseText = 2;
}

// ------------------------ Buffer ------------------------

message Buffer {
  bool preferDirect = 1;
  int32 HeapArena = 2;
  int32 DirectArena = 3;
  int32 pageSize = 4;
  int32 maxOrder = 5;
  int32 smallCacheSize = 6;
  int32 normalCacheSize = 7;
  bool useCacheForAllThreads = 8;
  int32 directMemoryCacheAlignment = 9;
}

message GetBufferRequest {
}

service BufferService {
  rpc buffer(Buffer) returns (ConfigurationResponse);
  rpc get(GetBufferRequest) returns (Buffer);
}

// ------------------------ EventLoop ------------------------

message EventLoop {
  int32 parentWorkers = 1;
  int32 childWorkers = 2;
}

message GetEventLoopRequest {
}

service EventLoopService {
  rpc eventLoop(EventLoop) returns (ConfigurationResponse);
  rpc get(GetEventLoopRequest) returns (EventLoop);
}

// ------------------------ EventStream ------------------------

message EventStream {
  int32 workers = 1;
}

message GetEventStreamRequest {

}

service EventStreamService {
  rpc eventstream(EventStream) returns (ConfigurationResponse);
  rpc get(GetEventStreamRequest) returns (EventStream);
}

// ------------------------ HealthCheck ------------------------

message HealthCheck {
  int32 workers = 1;
  int32 timeInterval = 2;
}

message GetHealthCheckRequest {
}

service HealthCheckService {
  rpc healthcheck(HealthCheck) returns (ConfigurationResponse);
  rpc get(GetHealthCheckRequest) returns (HealthCheck);
}

// ------------------------ HTTP ------------------------

message HTTP {
  int64 maxContentLength = 1;
  int32 h2InitialWindowSize = 2;
  int64 h2MaxConcurrentStreams = 3;
  int64 h2MaxHeaderListSize = 4;
  int64 h2MaxHeaderTableSize = 5;
  int32 h2MaxFrameSize = 6;
  int32 maxInitialLineLength = 7;
  int32 maxHeaderSize = 8;
  int32 maxChunkSize = 9;
  int32 compressionThreshold = 10;
  int32 deflateCompressionLevel = 11;
  int32 brotliCompressionLevel = 12;
}

message GetHTTPRequest {
}

service HTTPService {
  rpc http(HTTP) returns (ConfigurationResponse);
  rpc get(GetHTTPRequest) returns (HTTP);
}

// ------------------------ Transport ------------------------

message Transport {
  enum Type {
    NIO = 0;
    EPOLL = 1;
    IOURING = 2;
  }

  enum ReceiveBufferAllocationType {
    FIXED = 0;
    ADAPTIVE = 1;
  }

  Type type = 1;
  ReceiveBufferAllocationType receiveBufferAllocationType = 2;
  repeated int32 receiveBufferSizes = 3;
  int32 tcpConnectionBacklog = 4;
  int32 socketReceiveBufferSize = 5;
  int32 socketSendBufferSize = 6;
  int32 tcpFastOpenMaximumPendingRequests = 7;
  int32 backendConnectTimeout = 8;
  int32 connectionIdleTimeout = 9;
}

message GetTransportRequest {
}

service TransportService {
  rpc transport(Transport) returns (ConfigurationResponse);
  rpc get(GetTransportRequest) returns (Transport);
}
